[package]
name = "wssocks"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
shuttle-service = { version = "0.5.2", features = ["web-axum"] }
axum = { version = "0.5", features = ["ws"] }
sync_wrapper = "0.1.1"
byteorder = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
pin-project = "*"